Add icons, shadows, background-image

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,14 +66,19 @@
             </li>
           </ul>
         </nav>
-        <ul class="list contact">
+        <ul class="list list-contact">
           <li class="list-item">
-            <a class="link link-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link link-contact" href="mailto:info@devstudio.com">
+              <svg class="header-icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="list-item">
             <a class="link link-contact" href="tel:+380961111111"
+              ><svg class="header-icon" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -104,7 +109,7 @@
           <ul class="list card-set">
             <li class="project-card">
               <img
-                src="./images/website-techno.jpg"
+                src="./images/portfolio/website-techno.jpg"
                 alt="Веб-сайт Технокряк"
                 width="370"
                 height="294"
@@ -116,7 +121,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/poster.jpg"
+                src="./images/portfolio/poster.jpg"
                 alt="Постер з двома баскетболістами"
                 width="370"
                 height="294"
@@ -128,7 +133,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/logo-restaurant.jpg"
+                src="./images/portfolio/logo-restaurant.jpg"
                 alt="Лого ресторану з  рибою"
                 width="370"
                 height="294"
@@ -140,7 +145,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/project-prime.jpg"
+                src="./images/portfolio/project-prime.jpg"
                 alt="Навушники"
                 width="370"
                 height="294"
@@ -152,7 +157,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/project-boxes.jpg"
+                src="./images/portfolio/project-boxes.jpg"
                 alt="Дві коробки"
                 width="370"
                 height="294"
@@ -164,7 +169,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/website-inspiration.jpg"
+                src="./images/portfolio/website-inspiration.jpg"
                 alt="Веб-сайт Inspiration has no Borders"
                 width="370"
                 height="294"
@@ -176,7 +181,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/magazine.jpg"
+                src="./images/portfolio/magazine.jpg"
                 alt="Журнал"
                 width="370"
                 height="294"
@@ -188,7 +193,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/label-tag.jpg"
+                src="./images/portfolio/label-tag.jpg"
                 alt="Етикетка"
                 width="370"
                 height="294"
@@ -200,7 +205,7 @@
             </li>
             <li class="project-card">
               <img
-                src="./images/growing-business.jpg"
+                src="./images/portfolio/growing-business.jpg"
                 alt="Додаток Growing Business"
                 width="370"
                 height="294"
@@ -215,37 +220,71 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="link logo logo-footer" href="./index.html" lang="en"
-          ><span class="logo-wrap">Web</span
-          ><span class="logo-wrap-footer">Studio</span></a
-        >
-        <address class="address">
-          <ul class="list">
-            <li class="list-item">
-              <a
-                class="link link-address-footer"
-                href="https://www.google.com/maps/d/u/0/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Українки, 26
+      <div class="container footer-container">
+        <div>
+          <a class="link logo logo-footer" href="./index.html" lang="en"
+            ><span class="logo-wrap">Web</span
+            ><span class="logo-wrap-footer">Studio</span></a
+          >
+          <address class="address">
+            <ul class="list">
+              <li class="list-item">
+                <a
+                  class="link link-address-footer"
+                  href="https://goo.gl/maps/8BweSNwP1uSrpVsL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="list-item">
+                <a
+                  class="link link-contact-footer"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="list-item">
+                <a class="link link-contact-footer" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join">
+          <p class="text-join">Приєднуйтесь</p>
+          <ul class="list social-list-footer">
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="list-item">
-              <a
-                class="link link-contact-footer"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="list-item">
-              <a class="link link-contact-footer" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
