--- a/index.html
+++ b/index.html
@@ -65,14 +65,20 @@
             </li>
           </ul>
         </nav>
-        <ul class="list contact">
+        <ul class="list list-contact">
           <li class="list-item">
-            <a class="link link-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link link-contact" href="mailto:info@devstudio.com">
+              <svg class="header-icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="list-item">
             <a class="link link-contact" href="tel:+380961111111"
+              >
+              <svg class="header-icon" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -89,28 +95,48 @@
       <section class="features">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="list">
-            <li class="list-item">
+          <ul class="list features-list">
+            <li class="list-item features-item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="subtitle-feature">Увага до деталей</h3>
               <p class="description-feature">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="list-item">
+            <li class="list-item features-item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="subtitle-feature">Пунктуальність</h3>
               <p class="description-feature">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="list-item">
+            <li class="list-item features-item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="subtitle-feature">Планування</h3>
               <p class="description-feature">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="list-item">
+            <li class="list-item features-item">
+              <div class="features-icon">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="subtitle-feature">Сучасні технології</h3>
               <p class="description-feature">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -165,7 +191,36 @@
               <div class="card-content">
                 <h3 class="team-member-name">Ігор Дем'яненко</h3>
                 <p class="job-position" lang="en">Product Designer</p>
-              </div>
+                <ul class="list social-list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
             </li>
             <li class="list-item card">
               <img
@@ -177,6 +232,36 @@
               <div class="card-content">
                 <h3 class="team-member-name">Ольга Рєпіна</h3>
                 <p class="job-position" lang="en">Frontend Developer</p>
+                                <ul class="list social-list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item card">
@@ -189,6 +274,36 @@
               <div class="card-content">
                 <h3 class="team-member-name">Микола Тарасов</h3>
                 <p class="job-position" lang="en">Marketing</p>
+                                <ul class="list social-list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item card">
@@ -201,15 +316,94 @@
               <div class="card-content">
                 <h3 class="team-member-name">Михайло Єрмаков</h3>
                 <p class="job-position" lang="en">UI Designer</p>
+                                <ul class="list social-list">
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="#">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="clients">
+<div class="container">
+  <h2 class="section-title">Постійні клієнти</h2>
+  <ul class="list clients-list">
+    <li class="client-item">
+      <a class="client-link" href="#">
+        <svg class="client-icon" width="106" height="60">
+          <use href="./images/icons.svg#client-logo1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="client-item">
+      <a class="client-link" href="#">
+        <svg class="client-icon" width="106" height="60">
+          <use href="./images/icons.svg#client-logo2"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="client-item">
+      <a class="client-link" href="#">
+        <svg class="client-icon" width="106" height="60">
+          <use href="./images/icons.svg#client-logo3"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="client-item">
+      <a class="client-link" href="#">
+        <svg class="client-icon" width="106" height="60">
+          <use href="./images/icons.svg#client-logo4"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="client-item">
+      <a class="client-link" href="#">
+        <svg class="client-icon" width="106" height="60">
+          <use href="./images/icons.svg#client-logo5"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="client-item">
+      <a class="client-link" href="#">
+        <svg class="client-icon" width="106" height="60">
+          <use href="./images/icons.svg#client-logo6"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+</div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="link logo logo-footer" href="./index.html" lang="en"
+      <div class="container footer-container">
+        <div><a class="link logo logo-footer" href="./index.html" lang="en"
           ><span class="logo-wrap">Web</span
           ><span class="logo-wrap-footer">Studio</span></a
         >
@@ -237,7 +431,40 @@
               >
             </li>
           </ul>
-        </address>
+        </address></div>
+        <div class="join">
+          <p class="text-join">Приєднуйтесь</p>
+          <ul class="list social-list-footer">
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item-footer">
+              <a class="social-link-footer" href="#">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
