Updated index.html (validator)

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             >
           </li>
           <li class="list-item">
-            <a class="link link-contact" href="tel:+380961111111"
-              >
+            <a class="link link-contact" href="tel:+380961111111">
               <svg class="header-icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use></svg
               >+38 096 111 11 11</a
@@ -221,6 +220,7 @@
                     </a>
                   </li>
                 </ul>
+              </div>
             </li>
             <li class="list-item card">
               <img
@@ -232,7 +232,7 @@
               <div class="card-content">
                 <h3 class="team-member-name">Ольга Рєпіна</h3>
                 <p class="job-position" lang="en">Frontend Developer</p>
-                                <ul class="list social-list">
+                <ul class="list social-list">
                   <li>
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
@@ -274,7 +274,7 @@
               <div class="card-content">
                 <h3 class="team-member-name">Микола Тарасов</h3>
                 <p class="job-position" lang="en">Marketing</p>
-                                <ul class="list social-list">
+                <ul class="list social-list">
                   <li>
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
@@ -316,7 +316,7 @@
               <div class="card-content">
                 <h3 class="team-member-name">Михайло Єрмаков</h3>
                 <p class="job-position" lang="en">UI Designer</p>
-                                <ul class="list social-list">
+                <ul class="list social-list">
                   <li>
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
@@ -352,86 +352,88 @@
         </div>
       </section>
       <section class="clients">
-<div class="container">
-  <h2 class="section-title">Постійні клієнти</h2>
-  <ul class="list clients-list">
-    <li class="client-item">
-      <a class="client-link" href="#">
-        <svg class="client-icon" width="106" height="60">
-          <use href="./images/icons.svg#client-logo1"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="client-item">
-      <a class="client-link" href="#">
-        <svg class="client-icon" width="106" height="60">
-          <use href="./images/icons.svg#client-logo2"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="client-item">
-      <a class="client-link" href="#">
-        <svg class="client-icon" width="106" height="60">
-          <use href="./images/icons.svg#client-logo3"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="client-item">
-      <a class="client-link" href="#">
-        <svg class="client-icon" width="106" height="60">
-          <use href="./images/icons.svg#client-logo4"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="client-item">
-      <a class="client-link" href="#">
-        <svg class="client-icon" width="106" height="60">
-          <use href="./images/icons.svg#client-logo5"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="client-item">
-      <a class="client-link" href="#">
-        <svg class="client-icon" width="106" height="60">
-          <use href="./images/icons.svg#client-logo6"></use>
-        </svg>
-      </a>
-    </li>
-  </ul>
-</div>
+        <div class="container">
+          <h2 class="section-title">Постійні клієнти</h2>
+          <ul class="list clients-list">
+            <li class="client-item">
+              <a class="client-link" href="#">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="#">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="#">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="#">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="#">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="#">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <div><a class="link logo logo-footer" href="./index.html" lang="en"
-          ><span class="logo-wrap">Web</span
-          ><span class="logo-wrap-footer">Studio</span></a
-        >
-        <address class="address">
-          <ul class="list">
-            <li class="list-item">
-              <a
-                class="link link-address-footer"
-                href="https://goo.gl/maps/8BweSNwP1uSrpVsL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="list-item">
-              <a
-                class="link link-contact-footer"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="list-item">
-              <a class="link link-contact-footer" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address></div>
+        <div>
+          <a class="link logo logo-footer" href="./index.html" lang="en"
+            ><span class="logo-wrap">Web</span
+            ><span class="logo-wrap-footer">Studio</span></a
+          >
+          <address class="address">
+            <ul class="list">
+              <li class="list-item">
+                <a
+                  class="link link-address-footer"
+                  href="https://goo.gl/maps/8BweSNwP1uSrpVsL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="list-item">
+                <a
+                  class="link link-contact-footer"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="list-item">
+                <a class="link link-contact-footer" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
         <div class="join">
           <p class="text-join">Приєднуйтесь</p>
           <ul class="list social-list-footer">
