--- a/index.html
+++ b/index.html
@@ -191,28 +191,28 @@
                 <h3 class="team-member-name">Ігор Дем'яненко</h3>
                 <p class="job-position" lang="en">Product Designer</p>
                 <ul class="list social-list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -233,28 +233,28 @@
                 <h3 class="team-member-name">Ольга Рєпіна</h3>
                 <p class="job-position" lang="en">Frontend Developer</p>
                 <ul class="list social-list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -275,28 +275,28 @@
                 <h3 class="team-member-name">Микола Тарасов</h3>
                 <p class="job-position" lang="en">Marketing</p>
                 <ul class="list social-list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -317,28 +317,28 @@
                 <h3 class="team-member-name">Михайло Єрмаков</h3>
                 <p class="job-position" lang="en">UI Designer</p>
                 <ul class="list social-list">
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a class="social-link" href="#">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
