fix error with focus on cards in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
           </ul>
           <ul class="list card-set">
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/website-techno.jpg"
                   alt="Веб-сайт Технокряк"
@@ -122,7 +122,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/poster.jpg"
                   alt="Постер з двома баскетболістами"
@@ -138,7 +138,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/logo-restaurant.jpg"
                   alt="Лого ресторану з  рибою"
@@ -152,7 +152,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/project-prime.jpg"
                   alt="Навушники"
@@ -166,7 +166,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/project-boxes.jpg"
                   alt="Дві коробки"
@@ -180,7 +180,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/website-inspiration.jpg"
                   alt="Веб-сайт Inspiration has no Borders"
@@ -194,7 +194,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/magazine.jpg"
                   alt="Журнал"
@@ -208,7 +208,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/label-tag.jpg"
                   alt="Етикетка"
@@ -222,7 +222,7 @@
               >
             </li>
             <li class="project-card">
-              <a class="project-link"
+              <a href="#" class="project-link"
                 ><img
                   src="./images/portfolio/growing-business.jpg"
                   alt="Додаток Growing Business"
